# crewai-plus-lead-scoring

./: README.md  pyproject.toml
src/crewai_plus_lead_scoring/: crew.py  main.py
src/crewai_plus_lead_scoring/config/: agents.yaml  tasks.yaml
