[tool.poetry]
name = "crewai_plus_lead_scoring"
version = "0.1.0"
description = "crewai-plus-lead-scoring using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.36.0"}

[tool.poetry.scripts]
crewai_plus_lead_scoring = "crewai_plus_lead_scoring.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"